# my_os

./: Cargo.toml  x86_64-my_os.json
builder/: Cargo.toml
builder/src/: main.rs  test_runner.rs
firmware/x64/: code.fd  shell.efi
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: framebuffer.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs
kernel/tests/: basic_boot.rs  breakpoint.rs  full_init.rs  serial_output.rs  should_panic.rs  stack_overflow.rs  types_test.rs
