[package]
name = "my_os"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader_api = "0.11"
spin = "0.9.8"
x86_64 = "0.15.4"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"
font8x8 = { version = "0.3.1", default-features = false, features = ["unicode"] }

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}" , "-display", "sdl"]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
test-timeout = 300
[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[[bin]]
name = "my_os"
test = false
bench = false





